test on pages 500 / 400

--- a/public/404.html
+++ b/public/404.html
@@ -65,7 +65,7 @@
 <body>
   <div class="banner">
     <div class="mask">
-      <img src="404.jpg" alt="This page doesn't exist">
+      <img src="/assets/404.jpg" alt="This page doesn't exist">
     </div>
     <div class="banner-content">
       <h1>This page doesn't exist</h1>
