test on pages 500 / 400

--- a/public/500.html
+++ b/public/500.html
@@ -65,7 +65,7 @@
 <body>
   <div class="banner">
     <div class="mask">
-      <img src="/assets/500.jpg" alt="something went wrong">
+      <img src="/500.jpg" alt="something went wrong">
     </div>
     <div class="banner-content">
       <h1>Something went wrong</h1>
